# discord-verify

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  justfile  nginx.conf  osv-scanner.toml  secretspec.toml
.github/workflows/: build-and-push.yml
nix/: module.nix
src/: config.rs  error.rs  keycloak.rs  main.rs  state.rs
src/bot/: commands.rs  guild_config.rs  mod.rs  role_config.rs
src/bot/commands/: config.rs  mod.rs  reverify.rs  setlogchannel.rs  setunverifiedrole.rs  setuproles.rs  setverifiedrole.rs  unverify.rs  userinfo.rs  utils.rs  verify.rs
src/frontend/: app.rs
src/frontend/pages/: error.rs  success.rs
src/web/: api.rs  auth.rs  mod.rs
