[package]
name = "discord-verify"
version = "0.1.0"
edition = "2024"
license = "(MIT OR Apache-2.0)"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle
output-name = "discord-verify"

# The site root folder is where cargo-leptos generate all output
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
site-pkg-dir = "pkg"

# Assets source dir (relative to Cargo.toml)
assets-dir = "public"

# The IP and port where the server serves the content
site-addr = "0.0.0.0:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool
watch = false

# The features to use when compiling the bin target
bin-features = []

# The features to use when compiling the lib target
lib-features = ["csr"]

# If the --no-default-features flag should be used when compiling the lib target
lib-default-features = false

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
axum-oidc = "=1.0.0-dev-0"
chrono = "0.4.42"
dotenvy = "0.15.7"
keycloak = "26.4.0"
leptos = { version = "0.8.12", features = ["csr", "nightly"] }
leptos_axum = "0.8.6"
leptos_router = "0.8.9"
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
